[package]
name = "tokio-bincode"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
version = "0.1.0"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-bincode"
repository = "https://github.com/LucioFranco/tokio-bincode"
description = "Bincode based `tokio-codec` adapter."
keywords = ["networking", "bincode", "futures"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
bytes = "*"
bincode = "1.0"
tokio-util = {version = "*", features = ["codec"]}
serde = "1.0"

[dev-dependencies]
tokio = "0.1"
futures = "0.1"
serde_derive = "1.0"
